# checkit-pipeline

./: .env.example  .gitignore  CLAUDE.md  Module_03_Etape1_Sources_Exploration.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  spec_to_modify.md
dags/: README.md  checkit_pipeline_dag.py
data/samples/: fakeddit_multimodal_sample.tsv
docker/postgres/: init.sh
docs/: architecture.md  data_card.md  etape3_transformation.md  etl_kpi_report.md  monitoring.md  presentation_bilan.md
src/extraction/: README.md  fakeddit.py  guardian.py  liar.py  newsdata.py  snopes.py
src/monitoring/: README.md  dashboard.py  kpi.py  streamlit_app.py
src/transformation/: README.md  cleaner.py  dataset.py  images.py  load.py  normalizer.py  pipeline.py  schema.py  validator.py
src/utils/: README.md  config.py  io.py  logger.py
tests/extraction/: test_guardian.py
tests/monitoring/: test_dashboard.py  test_kpi.py  test_streamlit_app.py
tests/transformation/: test_cleaner.py  test_dataset.py  test_images.py  test_load.py  test_normalizer.py  test_pipeline.py  test_validator.py
