[project]
name = "checkit-pipeline"
version = "0.1.0"
description = "ETL pipeline for multimodal fake news detection (CheckIt.AI)"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Pierre Pluton", email = "pierre.pluton@outlook.fr" },
]
dependencies = [
    "apache-airflow>=2.9",
    "beautifulsoup4>=4.12",
    "datasets>=4.8.5",
    "feedparser>=6.0",
    "pandas>=2.2",
    "protego>=0.6.0",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "requests>=2.32",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
